sent file to AC

--- a/doc/analytic_part.tex
+++ b/doc/analytic_part.tex
@@ -2,9 +2,9 @@
 \section{Оптические эффекты, учитываемые при построении реалистичного изображения}
 При построении реалистичных изображений необходимо учитывать такие эффекты оптики, как:
 \begin{itemize}
-	\item Отражающие свойства поверхностей: диффузное и зеркальное отражения;
-	\item Преломление части света при взаимодействии луча с прозрачной поверхностью;
-	\item Рассеяние света.
+	\item отражающие свойства поверхностей: диффузное и зеркальное отражения;
+	\item преломление части света при взаимодействии луча с прозрачной поверхностью;
+	\item рассеяние света.
 \end{itemize}
 
 Поскольку в данной работе не используются прозрачные объекты, будем рассматривать только отражение и рассеяние света.
@@ -27,30 +27,31 @@
 \end{equation}
 где $I_\text{р}$ -- интенсивность рассеянного света, $k_\text{р}$ -- коэффициент диффузного отражения рассеянного света.
 
-Также необходимо учесть затухание света с расстоянием. Интенсивность света падает обратно пропорционально квадрату расстояния до источника, однако как показывает практика, большей реалистичности можно добиться при линейном затухании \cite{lit1}. В этом случае получаем следующий результат:
+Также необходимо учесть затухание света с расстоянием. Интенсивность света падает обратно пропорционально квадрату расстояния до источника, однако, как показывает практика, большей реалистичности можно добиться при линейном затухании \cite{lit1}. В этом случае получаем следующий результат:
 \begin{equation}
 	I = I_\text{р}k_\text{р} + \frac{I_\text{и} cos\theta \cdot k_\text{д} + I_\text{и} cos^n\alpha \cdot k_\text{з}}{d + K}, 
 \end{equation}
 где $d$ -- расстояние до источника освещения, $K$ -- произвольная константа.
 
 \section{Алгоритмы удаления невидимых линий и поверхностей}
-Все алгоритмы удаления невидимых линий работают либо в пространстве объектов, либо в пространстве изображений.
+Все алгоритмы удаления невидимых линий работают либо в пространстве объектов, либо в пространстве изображений. Рассмотрим наиболее известные из них~\cite{lit1}.
 \subsection{Алгоритм Робертса}
-Этот алгоритм позволяет определить, какие рёбра или части рёбер объектов сцены видимы, а какие заслонены гранями других объектов. Он работает в объектном пространстве и использует проекции объектов на картинную плоскость для анализа видимости \cite{lit2}. 
+Этот алгоритм работает в объектном пространстве и использует проекции объектов на картинную плоскость для анализа видимости. Алгоритм прежде всего удаляет из каждого тела те ребра или грани, которые экранируются самим телом. Затем каждое из видимых ребер каждого тела сравнивается с каждым из оставшихся тел для определения того, какая его часть или части, если таковые есть, экранируются этими телами. Поэтому вычислительная трудоемкость алгоритма Робертса растет теоретически как квадрат числа объектов~\cite{lit1}.
 
 \subsection{Алгоритм Варнока}
-Алгоритм Варнока основывается на рекурсивном разбиении окна на подокна всякий раз, когда оно не пусто, до окна размеров в 1 пиксель, после чего определяется ближайший к наблюдателю объект, пиксель закрашивается цветом этого объекта.
+Алгоритм Варнока основывается на рекурсивном разбиении окна на подокна всякий раз, когда оно не пусто, до окна размеров в 1 пиксель, после чего определяется ближайший к наблюдателю объект, пиксель закрашивается цветом этого объекта. Рекурсивность алгоритма является главным недостатком алгоритма: окно каждый раз делится на 4 подокна, если размер окна больше одного пикселя, или оно содержит несколько объектов, или пересекается с объектом.
 
 \subsection{Алгоритм, использующий z-буфер}
 
 Алгоритм основывается на хранении глубины (z-значения) каждого пикселя экрана и определении ближайшей к экрану точки при разложении многоугольников в растр.
-Главное преимущество алгоритма -- его простота. Кроме того, этот ал-горитм решает задачу об удалении невидимых поверхностей и делает тривиальной визуализацию пересечений сложных поверхностей -- сцены могут быть любой сложности.
-Основной недостаток алгоритма -- большой объем требуемой памяти \cite{lit3}.
+Главное преимущество алгоритма -- его простота. Кроме того, этот алгоритм решает задачу об удалении невидимых поверхностей и делает тривиальной визуализацию пересечений сложных поверхностей -- сцены могут быть любой сложности.
+Основной недостаток алгоритма -- большой объем требуемой памяти \cite{lit1}.
 
 
 \subsection{Алгоритм обратной трассировки лучей}
 Метод прямой и обратной трассировки лучей заключается в том, что от момента испускания лучей источником света до момента попадания в камеру, траектории лучей отслеживаются, и рассчитываются пересечения лучей с лежащими на траектории объектами. При этом луч может быть поглощен, диффузно и/или зеркально отражен или, в случае прозрачности некоторых объектов, преломлен \cite{lit4}.
 
+\clearpage
 \section{Методы закраски}
 \subsection{Простая закраска}
 Если предположить, что источник света находится на бесконечности, то лучи света, падающие на поверхность, параллельны между собой. Если к этому добавить условие, что наблюдатель находится в бесконечно удаленной точке, то эффектом ослабления света с увеличением расстояния от источника также можно пренебречь. При таких вводных плоская грань во всех ее точках имеет одинаковую интенсивность освещения, поэтому она закрашивается одним цветом.
@@ -83,8 +84,8 @@
 Стоит отметить, что в случае алгоритма обратной трассировки лучей задача построения теней сводится к тому, чтобы при нахождении точки пересечения луча с объектом сцены провести еще один луч от этой точки к источнику света. Если на пути луча встречается преграда в виде поверхности какого-либо объекта сцены, точка находится в тени.
 
 
-\section*{Вывод}
+\subsection*{Вывод}
 
-В данном разделе были рассмотрены основные методы построения реалистичных изображений. Для удаления невидимых ребер, учета отражения света и теней лучше всего в данной работе подойдет алгоритм обратной трассировки лучей в силу своей универсальности и реалистичности результата.
+В данном разделе были рассмотрены основные методы построения реалистичных изображений. Для удаления невидимых ребер, учета отражения света и теней в данной работе был выбран алгоритм обратной трассировки лучей в силу своей универсальности и реалистичности результата.
 
 \clearpage
