--- a/doc/coursework.tex
+++ b/doc/coursework.tex
@@ -3,6 +3,7 @@
 \begin{document}
 	%\include{title}
 	
+	\includepdf{Title_cg}
 	\setcounter{page}{4}
 	
 	\def\contentsname{\begin{center}СОДЕРЖАНИЕ\end{center}}
