--- a/doc/intro.tex
+++ b/doc/intro.tex
@@ -1,6 +1,6 @@
 \ssr{ВВЕДЕНИЕ}
 
-Задача построения реалистичных трехмерных сцен, учитывающих оптические свойства поверхностей и источников света, является центральной в компьютерной графике. Для решения этой задачи было предложено множество алгоритмов. Генри Гуро и Том Фонг предложили алгоритмы реалистичной раскраски поверхностей, Эд Кэтмул ввел концепцию z-буфера, а Тернер Уиттед предложил трассировку лучей.
+Задача построения реалистичных трехмерных сцен, учитывающих оптические свойства поверхностей и источников света, является центральной в компьютерной графике. В настоящей работе рассматриваются методы решения данной задачи.
 
 Цель работы –- реализовать алгоритм построения реалистичных трехмерных сцен объектов.
 
