--- a/doc/preambula.tex
+++ b/doc/preambula.tex
@@ -28,6 +28,8 @@
 \usepackage[figure,table]{totalcount}
 \usepackage{lastpage}
 \usepackage{amsmath}
+\usepackage{xurl}
+\urlstyle{same}
 
 \setlist{nosep}
 
