--- a/doc/design_part.tex
+++ b/doc/design_part.tex
@@ -1,5 +1,15 @@
 \chapter{Конструкторская часть}
-В данном разделе рассматриваются схемы алгоритмов визуализации сцены объектов методом трассировки лучей.
+В данном разделе формализуются объекты сцены и их структура, рассматриваются схемы алгоритмов визуализации сцены объектов методом трассировки лучей.
+
+\section{Формализация объектов синтезируемой сцены}
+Синтезируемые сцены состоят из следующих типов объектов:
+\begin{itemize}
+	\item точечный источник света, представимый положением в пространстве и интенсивностью;
+	\item сфера, представимая точкой центра и радиусом;
+	\item куб, грани которого параллельны координатным плоскостям. В программе представлен точкой центра и длиной стороны;
+	\item шахматные фигуры: король, ферзь, ладья, слон, конь и пешка. Фигуры описываются точкой положения центра нижней грани, а также массивом треугольных полигонов, из которых составлена фигура. Треугольные полигоны, в свою очередь, описаны тремя вершинами и тремя нормалями в этих вершинах;
+	\item камера, характеризуемая положением в пространстве и направлением вектора наблюдения.
+\end{itemize}
 
 \section{Алгоритм трассировки лучей}
 \begin{figure}[H]
@@ -10,7 +20,7 @@
 \end{figure}
 
 \section{Алгоритмы нахождения точки пересечения луча с объектом сцены}
-В данной работе объекты сцены представлены одним из следующих типов:
+Как было описано выше, в данной работе синтезируемые объекты сцены представлены одним из следующих типов:
 \begin{itemize}
 	\item сфера;
 	\item куб;
@@ -90,6 +100,6 @@
 \end{figure}
 
 \section{Вывод}
-
+В данном разделе были формализованы объекты сцены и их структура, рассмотрены схемы алгоритмов визуализации сцены объектов методом трассировки лучей.
 
 \clearpage
