--- a/doc/design_part.tex
+++ b/doc/design_part.tex
@@ -1,5 +1,29 @@
 \chapter{Конструкторская часть}
-В данном разделе формализуются объекты сцены и их структура, рассматриваются схемы алгоритмов визуализации сцены объектов методом трассировки лучей.
+В данном разделе формализуются требования к программному обеспечению, объекты сцены и их структура, приводится декомпозиция задачи, а также рассматриваются схемы алгоритмов визуализации сцен объектов методом трассировки лучей.
+
+\section{Требования к программному обеспечению}
+Пользовательский интерфейс разрабатываемой программы должен предоставлять следующие функциональные возможности:
+\begin{itemize}
+	\item возможность выбора визуализируемой сцены из трех предложенных вариантов: сцена с двумя сферами, сцена с кубом, сферой и фигурой коня, сцена со всеми шахматными фигурами;
+	\item возможность выбора объекта сцены путем нажатия на него мышкой или его выбора в списке объектов;
+	\item возможность изменения цвета и коэффициента отражения выбранного объекта сцены;
+	\item возможность выбора типа закраски объекта: по методу Гуро и по методу Фонга;
+	\item возможность включения режима глубины поля, при этом возможно изменение расстояния от камеры до фокальной плоскости;
+	\item возможность включения режима сглаживания изображения.
+\end{itemize}
+
+К разработанному ПО предъявляются следующие требования:
+\begin{itemize}
+	\item чтение моделей шахматных фигур производится из объектных файлов при первом построении выбранной сцены в рамках одного запуска программы, модели шахматных фигур представлены полигональной сеткой;
+	\item модели шара и куба представляются в программе аналитически;
+	\item программа должна корректно обрабатывать ввод некорректных данных.
+\end{itemize}
+
+%К разработанному ПО применяются следующие допущения:
+%\begin{itemize}
+%	\item точечный источник света имеет фиксированное положение и присутствует на каждой сцене в одном экземпляре;
+%	\item 
+%\end{itemize}
 
 \section{Формализация объектов синтезируемой сцены}
 Синтезируемые сцены состоят из следующих типов объектов:
@@ -10,6 +34,34 @@
 	\item шахматные фигуры: король, ферзь, ладья, слон, конь и пешка. Фигуры описываются точкой положения центра нижней грани, а также массивом треугольных полигонов, из которых составлена фигура. Треугольные полигоны, в свою очередь, описаны тремя вершинами и тремя нормалями в этих вершинах;
 	\item камера, характеризуемая положением в пространстве и направлением вектора наблюдения.
 \end{itemize}
+
+
+\section{Декомпозиция задачи}
+В результате декомпозиции задачи были получены подзадачи, показанные на рисунке~\ref{fig:IDEF0_top}~-~\ref{fig:IDEF0_2}.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth]{IDEF0_top}
+	\caption{Верхний уровень декомпозиции задачи}
+	\label{fig:IDEF0_top}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth]{IDEF0_A0}
+	\caption{Декомпозиция блока А0}
+	\label{fig:IDEF0_1}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth]{IDEF0_A2}
+	\caption{Декомпозиция блока А2}
+	\label{fig:IDEF0_2}
+\end{figure}
+
+Блок А23 трассировки лучей реализован в виде схемы алгоритма, приведенной на рисунке~\ref{fig:RayTracing}.
+
 
 \section{Алгоритм трассировки лучей}
 \begin{figure}[H]
@@ -26,6 +78,7 @@
 	\item куб;
 	\item шахматные фигуры, поверхность которых состоит из треугольных полигонов.
 \end{itemize}
+Ниже описаны алгоритмы пересечения луча трассировки с каждым из этих типов объектов.
 
 \subsection{Алгоритм нахождения точки пересечения луча со сферой}
 Пусть $\vec{c}$ -- центр сферы, $r$ -- ее радиус. При известных $\vec{p_0}$ и $\vec{u}$ -- точке начала и вектора направления луча соответственно, можно выразить точку луча следующим образом:
@@ -100,6 +153,6 @@
 \end{figure}
 
 \section{Вывод}
-В данном разделе были формализованы объекты сцены и их структура, рассмотрены схемы алгоритмов визуализации сцены объектов методом трассировки лучей.
+В данном разделе были формализованы требования к реализуемому ПО, объекты сцены и их структура, приведена декомпозиция задачи, а также рассмотрены схемы алгоритмов визуализации сцены объектов методом трассировки лучей.
 
 \clearpage
