--- a/doc/intro.tex
+++ b/doc/intro.tex
@@ -2,7 +2,7 @@
 
 Задача построения реалистичных трехмерных сцен, учитывающих оптические свойства поверхностей и источников света, является центральной в компьютерной графике. В настоящей работе рассматриваются методы решения данной задачи.
 
-Цель работы –- реализовать алгоритм построения реалистичных трехмерных сцен объектов.
+Цель работы -- разработка программного обеспечения (ПО) для создания реалистичного изображения сцен трехмерных объектов.
 
 Для достижения поставленной цели необходимо решить следующие задачи:
 \begin{enumerate}
