--- a/doc/experimental_part.tex
+++ b/doc/experimental_part.tex
@@ -1,5 +1,30 @@
 \chapter{Исследовательская часть}
 
+В данном разделе приведены технические характеристики устройства, на котором проводились замеры времени выполнения программного обеспечения, а также результаты исследования.
+
+\section{Технические характеристики}
+Исследование по замерам времени выполнения программы проводились на персональном компьютере, оснащенном следующими компонентами:
+\begin{itemize}
+	\item процессор Intel Core i7-12700KF 3.60~Ггц с 12 ядрами: 8 производительных и 4 энергоэффектиных;
+	\item оперативной памятью объемом 32~Гб;
+	\item операционная система Windows 11 Home 64-рязрядная.
+	\end{itemize}
+	
+\section{Описание исследования}
+В рамках данного исследования проводятся замеры времени растеризации сцены в зависимости от числа лучей, используемых для симуляции эффекта глубины поля. В исследовании участвуют две сцены программы: сцена с 6 стенами и двумя сферами, каждая из которых имеет коэффициент отражения 0.5, а также сцена с шестью стенами и конем: сфера при этом полностью зеркальна.
+
+Для каждой сцены и каждого числа лучей замеры времени усредняются по 20 замерам.
+
+\section{Результаты исследования}
+Результаты исследования зависимости времени растеризации сцены объектов в зависимости от числа лучей, используемых для симуляции эффекта глубины поля, приведены в таблице~\ref{}.
+
+Результаты визуализации полученных данных приведены на рисунках~\ref{}~-~\ref{}.
+
+
+
+
+
+
 \section{Вывод}
 
 \clearpage
