--- a/doc/links.tex
+++ b/doc/links.tex
@@ -6,7 +6,7 @@
 	\bibitem{lit6} Построение теней [Электронный ресурс]. URL: \url{https://stratum.ac.ru/education/textbooks/kgrafic/additional/addit28.html} (дата обращения 06.10.24);
 	\bibitem{lit7} Glassner, Andrew. An Introduction to Ray Tracing. New York: Academic Press, 1991. 359p.;
 	\bibitem{lit8} Fast Minimum Storage Ray/Triangle Intersection [Электронный ресурс]. URL: \url{https://web.archive.org/web/20170517125238/http://www.cs.virginia.edu/~gfx/Courses/2003/ImageSynthesis/papers/Acceleration/Fast\%20MinimumStorage\%20RayTriangle\%20Intersection.pdf};
-	\bibitem{CSharp} Заметки о выпуске C# 7.3 [Электронный ресурс]. URL: \url{https://docs.microsoft.com/en-us/visualstudio/releasenotes/vs2017-relnotes-v15.7#csharp} (дата обращения 4.12.2024);
+	\bibitem{CSharp} Заметки о выпуске C\# 7.3 [Электронный ресурс]. URL: \url{https://docs.microsoft.com/en-us/visualstudio/releasenotes/vs2017-relnotes-v15.7#csharp} (дата обращения 4.12.2024);
 	\bibitem{VS2022} Microsoft Visual Studio 2022 [Электронный ресурс]. URL: \url{https://visualstudio.microsoft.com/ru/vs/};
 	\bibitem{Anti-aliasing} Сглаживание [Электронный ресурс]. URL: \url{https://www.nvidia.com/content/Control-Panel-Help/vLatest/ru-ru/mergedProjects/nv3dRUS/antialiasing.htm} (дата обращения 04.12.2024);
 	
